--- a/package.json
+++ b/package.json
@@ -20,12 +20,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "firebase-admin": "^8.8.0",
+    "js-yaml": "^3.13.1",
     "nodemon": "^2.0.1",
     "ws": "^7.2.0"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.2",
-    "@types/ws": "^6.0.4",
-    "typescript": "^3.7.3"
   }
 }
