--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/paydaylight/caremet-server#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^8.8.0",
     "js-yaml": "^3.13.1",
+    "mongoose": "^5.7.14",
     "nodemon": "^2.0.1",
     "ws": "^7.2.0"
   }
